--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,44 +1,52 @@
 <ion-header>
-  <ion-toolbar color="dark">
+  <ion-toolbar color="primary">
     <ion-title>
-      Login Google and Facebook
+      Login
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
 
-  <ion-grid>
+  <ion-grid *ngIf="user">
     <ion-row>
       <ion-col size="5">
-        <ion-img class="picture" [src]="picture ? picture : 'https://www.simplifai.ai/wp-content/uploads/2019/06/blank-profile-picture-973460_960_720-400x400.png'"></ion-img>
+        <ion-img class="picture" [src]="user 
+                                        ? user.picture 
+                                        : 'https://www.simplifai.ai/wp-content/uploads/2019/06/blank-profile-picture-973460_960_720-400x400.png'">
+        </ion-img>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="12">
-        <ion-text>
-          {{ name ? name : 'Nombre de usuario' }}
+        <ion-text>Nombres: {{user.name}}</ion-text>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12">
+        <ion-text>Correo: {{user.email}}
         </ion-text>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="12">
-        <ion-text>
-          {{ email ? email : 'Correo electrónico' }}
-        </ion-text>
+        <ion-text>Usuario: {{user.usuario}}</ion-text>
       </ion-col>
     </ion-row>
   </ion-grid>
 
-  <div class="buttonsContainer">
-    <!-- <ion-button expand="block" color="google" (click)="loginGoogle()">
-      <ion-icon name="logo-google"></ion-icon>
-      Iniciar Sesión con Google
-    </ion-button> -->
+  <div class="buttonsContainer" *ngIf="!flag">
     <div class="ion-margin-top"></div>
-    <ion-button expand="block" color="facebook" (click)="loginFacebook()">
+    <ion-button expand="block" (click)="loginFacebook()">
       <ion-icon name="logo-facebook"></ion-icon>
-      Iniciar Sesión con Facebook
+      Acceder con Facebook
     </ion-button>
   </div>
+
+  <div class="buttonsContainer" *ngIf="flag">
+    <ion-button expand="block" (click)="continue()">
+      <ion-icon name="arrow-forward-circle-outline"></ion-icon>
+      Continuar
+    </ion-button>
+  </div> 
 </ion-content>
